Agregando apuntes de SQL: Count, Distinct, Where y Operadores logicos

--- a/Clase-1/1. Consultas.md
+++ b/Clase-1/1. Consultas.md
@@ -1,1 +1,115 @@
-#Consultar una base de datos
+# Consultas Básicas en SQL
+
+## 1. Función COUNT (Contar)
+Sirve para contar registros.
+
+- **Contar registros con valor en un campo específico** (ignora nulos):
+  ```sql
+  SELECT COUNT(campo) AS alias_campo
+  FROM tabla;
+  ```
+
+- **Contar el total de filas de una tabla** (incluye nulos):
+  ```sql
+  SELECT COUNT(*)
+  FROM tabla;
+  ```
+
+## 2. Valores Únicos (DISTINCT)
+Elimina duplicados del resultado.
+
+- **Sintaxis básica:**
+  ```sql
+  SELECT DISTINCT campo
+  FROM tabla;
+  ```
+
+- **Combinado con COUNT** (Cuenta cuántos valores únicos hay):
+  ```sql
+  -- Ejemplo: Contar países distintos en la tabla films
+  SELECT COUNT(DISTINCT country) AS count_distinct_countries
+  FROM films;
+  ```
+
+---
+
+## 3. Orden de Ejecución SQL 
+Es esencial entender que SQL **no se ejecuta en el orden en que se escribe**.
+
+
+
+1.  **FROM**: ¿De dónde saco los datos?
+2.  **WHERE**: Filtro las filas antes de agruparlas o seleccionarlas.
+3.  **SELECT**: Elijo qué columnas mostrar.
+4.  **LIMIT**: Limito la cantidad de resultados finales.
+
+---
+
+## 4. Filtrar Datos (WHERE)
+Se usa para filtrar registros numéricos o de texto.
+
+- **Sintaxis:**
+  ```sql
+  SELECT campo
+  FROM tabla
+  WHERE campo > valor;
+  ```
+
+- **Operadores de comparación:**
+  - `>` (Mayor que)
+  - `>=` (Mayor o igual)
+  - `<` (Menor que)
+  - `<=` (Menor o igual)
+  - `=` (Igual)
+  - `<>` o `!=` (Diferente)
+
+### Ejemplos Prácticos:
+```sql
+-- Películas con menos de 1000 likes, limitando a 10 resultados
+SELECT film_id, facebook_likes
+FROM reviews
+WHERE facebook_likes < 1000
+LIMIT 10;
+
+-- Películas en español
+SELECT COUNT(language) AS count_spanish
+FROM films
+WHERE language = 'Spanish';
+```
+
+---
+
+## 5. Filtrado con Múltiples Criterios
+
+### Operador OR
+Se cumple si **al menos una** condición es verdadera.
+```sql
+SELECT title, release_year
+FROM films
+WHERE (release_year = 1990 OR release_year = 1999)
+  AND (language = 'English' OR language = 'Spanish')
+  AND (gross > 2000000);
+```
+
+### Operador AND
+Se deben cumplir **todas** las condiciones.
+```sql
+-- Películas en alemán lanzadas entre 2000 y 2010
+SELECT * FROM films
+WHERE language = 'German'
+  AND (release_year > 2000 AND release_year < 2010);
+```
+
+### Operador BETWEEN (Rangos)
+Incluye los valores de los extremos (inclusivo).
+```sql
+-- Sintaxis
+SELECT campo FROM tabla WHERE campo BETWEEN valor1 AND valor2;
+
+-- Ejemplo Real:
+SELECT title, release_year
+FROM films
+WHERE release_year BETWEEN 1990 AND 2000
+  AND budget > 100000000
+  AND (language = 'French' OR language = 'Spanish');
+```
