Agregando apuntes SQL: LIKE, NOT LIKE, IN

--- a/Clase-1/2. Filtrar_texto.md
+++ b/Clase-1/2. Filtrar_texto.md
@@ -1,31 +1,99 @@
-# Filtrar Texto
+# 🔍 Filtrar Texto en SQL
 
-## .Buscar patrones
-LIKE
-% - Coincide con cero, uno o muchos caracteres
+Este documento resume las formas más comunes y prácticas de **filtrar texto y valores** en SQL, usando operadores como `LIKE`, `NOT LIKE` e `IN`.
+
+---
+
+## 📌 Buscar patrones con `LIKE`
+
+El operador `LIKE` se utiliza para buscar **patrones** dentro de un campo de texto.
+
+### 🔹 `%` – Coincide con cero, uno o muchos caracteres
+
+```sql
 SELECT campo
 FROM tabla
-WHERE campo LIKE 'Ade%'; - '%r'(Terminen con r)
-(_) Coincide con un solo caracter
+WHERE campo LIKE 'Ade%';
+```
+
+👉 Devuelve los registros que **empiezan con "Ade"**.
+
+```sql
 SELECT campo
 FROM tabla
-WHERE campo LIKE 'Ade_'; - '__t%' (Tenga la T en posicion 3 y despues cualquier caracter)
+WHERE campo LIKE '%r';
+```
 
-NOT LIKE
-Encontrar registros que no coincidan
+👉 Devuelve los registros que **terminan con la letra "r"**.
+
+---
+
+### 🔹 `_` – Coincide con un solo carácter
+
+```sql
+SELECT campo
+FROM tabla
+WHERE campo LIKE 'Ade_';
+```
+
+👉 Coincide con textos que empiezan con `Ade` y tienen **exactamente un carácter adicional**.
+
+```sql
+SELECT campo
+FROM tabla
+WHERE campo LIKE '__t%';
+```
+
+👉 Coincide con textos que tienen la **letra `t` en la tercera posición**, seguida de cualquier cantidad de caracteres.
+
+---
+
+## ❌ Excluir patrones con `NOT LIKE`
+
+Se usa para encontrar registros que **NO coincidan** con un patrón específico.
+
+```sql
 SELECT campo
 FROM tabla
 WHERE campo NOT LIKE 'A.%';
-'No coinciden con A.'
+```
 
-IN
+👉 Devuelve los registros que **no comienzan con `A.`**.
+
+---
+
+## 📋 Filtrar múltiples valores con `IN`
+
+El operador `IN` permite evaluar múltiples valores sin necesidad de usar varios `OR`.
+
+### 🔹 Valores numéricos
+
+```sql
 SELECT campo
 FROM tabla
 WHERE campo IN (1920, 1930, 1940);
+```
 
-En lugar de usar OR varias veces, podemos usar IN
+---
 
+### 🔹 Valores de texto
+
+```sql
 SELECT campo
 FROM tabla
-WHERE campo IN ('Texto', 'Texto', 'Texto');
+WHERE campo IN ('Texto1', 'Texto2', 'Texto3');
+```
 
+👉 Ideal para mejorar la **legibilidad** y **mantenimiento** del código SQL.
+
+---
+
+## ✅ Buenas prácticas
+
+* Usa `LIKE` solo cuando necesites patrones.
+* Prefiere `IN` en lugar de múltiples condiciones `OR`.
+* Mantén ejemplos claros y comentados en tu repositorio.
+
+---
+
+📘 *Este material es ideal como referencia rápida para consultas SQL básicas y filtrado de datos.*
