Agregando apuntes de SQL: Reto

--- a/Clase-1/2. Filtrar_texto.md
+++ b/Clase-1/2. Filtrar_texto.md
@@ -96,4 +96,18 @@ WHERE campo IN ('Texto1', 'Texto2', 'Texto3');
 
 ---
 
+## ✅ Reto
+
+```sql
+-- Count the unique titles
+SELECT COUNT(DISTINCT title) AS nineties_english_films_for_teens
+FROM films
+-- Filter to release_years to between 1990 and 1999
+WHERE release_year BETWEEN 1990 AND 1999
+-- Filter to English-language films
+AND language = 'English'
+-- Narrow it down to G, PG, and PG-13 certifications
+AND certification IN ('G','PG','PG-13')
+```
+
 📘 *Este material es ideal como referencia rápida para consultas SQL básicas y filtrado de datos.*
