Agregando apuntes de SQL: IS NULL, NOT NULL

--- a/Clase-1/2. Filtrar_texto.md
+++ b/Clase-1/2. Filtrar_texto.md
@@ -109,5 +109,26 @@ AND language = 'English'
 -- Narrow it down to G, PG, and PG-13 certifications
 AND certification IN ('G','PG','PG-13')
 ```
+### 🔹 Valores NULL
+* Valores ausente
+
+```sql
+SELECT name
+FROM people
+WHERE birthdate IS NULL
+```
+```sql
+SELECT COUNT(*) AS no_birthdates
+FROM people
+WHERE birthdate IS NULL
+```
+### NOT NULL
+* Valores no nulos
+   
+```sql
+SELECT COUNT(name) AS count_birthdate
+FROM people
+WHERE birthdate IS NOT NULL
+```
 
 📘 *Este material es ideal como referencia rápida para consultas SQL básicas y filtrado de datos.*
